1.1.0

- Aggiunto fullscreen

1.0.0