@@ -1,0 +1,24 @@
+<?php
+header("Access-Control-Allow-Origin: *");
+header("Content-Type: application/json; charset=UTF-8");
+header("Access-Control-Allow-Methods: DELETE");
+header("Access-Control-Max-Age: 3600");
+header("Access-Control-Allow-Headers: Content-Type, Access-Control-Allow-Headers, Authorization, X-Requested-With");
+
+include_once '../config/database.php';
+include_once '../models/post.php';
+
+$database = new Database();
+$db = $database->getConnection();
+
+$post = new Post($db);
+
+$data = json_decode(file_get_contents("php://input"));
+
+if ($post->delete($_GET["id"])) {
+	http_response_code(200);
+	echo json_encode(array("response" => "Post deleted"));
+} else {
+	http_response_code(503);
+	echo json_encode(array("response" => "Impossible to delete the post"));
+}
